WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152630
[iOS WK2] Fix incorrect scrollPosition handling
https://bugs.webkit.org/show_bug.cgi?id=152630
Summary
[iOS WK2] Fix incorrect scrollPosition handling
Simon Fraser (smfr)
Reported
2015-12-31 15:49:34 PST
[iOS WK2] Fix incorrect scrollPosition hnadling
Attachments
Patch
(15.62 KB, patch)
2015-12-31 15:52 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(15.90 KB, patch)
2015-12-31 15:57 PST
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-12-31 15:52:24 PST
Created
attachment 268058
[details]
Patch
WebKit Commit Bot
Comment 2
2015-12-31 15:54:38 PST
Attachment 268058
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2015-12-31 15:57:42 PST
Created
attachment 268059
[details]
Patch
Simon Fraser (smfr)
Comment 4
2015-12-31 19:17:56 PST
https://trac.webkit.org/changeset/194476
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug